add google analytics

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                                 <div class="small-3 columns"></div>
                                                 <div class="small-9 columns">
                                                     <br />
-                                                    <button type="submit" class="button">Stundennachweise generieren</button>
+                                                    <button type="submit" class="button">Stundennachweise drucken</button>
                                                 </div>
                                             </div>
                                         </div>
