--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Stundennachweis</title>
+    <title>Arbeitszeitnachweis</title>
     <link rel="stylesheet" href="css/foundation.css"/>
     <link rel="stylesheet" href="css/base.css" media="all"/>
     <link rel="stylesheet" href="css/base_print.css" media="print"/>
@@ -18,7 +18,7 @@
                 <div class="large-12 columns">
                     <div class="row">
                         <div class="large-8 small-12 columns">
-                            <h1>Stundennachweis</h1>
+                            <h1>Arbeitszeitnachweis</h1>
                         </div>
                     </div>
                     <div class="row">
@@ -30,10 +30,10 @@
                                     <div class="small-11">
                                         <div class="row">
                                             <div class="small-3 columns">
-                                                <label for="form-name" class="right">Name, Vorname</label>
+                                                <label for="form-name" class="right">Vollständiger Name</label>
                                             </div>
                                             <div class="small-9 columns">
-                                                <input type="text" name="form-name" id="form-name" placeholder="Name, Vorname" value="" />
+                                                <input type="text" name="form-name" id="form-name" placeholder="Lukas Schulze" value="Lukas Schulze" />
                                             </div>
                                         </div>
                                     </div>
@@ -45,7 +45,7 @@
                                                 <label for="form-hours" class="right">Wochenstunden</label>
                                             </div>
                                             <div class="small-9 columns">
-                                                <input type="text" name="form-hours" id="form-hours" placeholder="7.5" value="" />
+                                                <input type="text" name="form-hours" id="form-hours" placeholder="7.5" value="10" />
                                             </div>
                                         </div>
                                     </div>
@@ -128,7 +128,7 @@
                                                     <label class="right">Fein-Tuning</label>
                                                 </div>
                                                 <div class="small-9 columns">
-                                                    <input type="checkbox" name="form-distribution-equally" value="1" id="form-distribution-equally"><label for="form-distribution-equally">Arbeitszeit gleichmäßig auf Tage aufteilen</label>
+                                                    <input type="checkbox" name="form-distribution-equally" value="1" checked="checked" id="form-distribution-equally"><label for="form-distribution-equally">Arbeitszeit gleichmäßig auf Tage aufteilen</label>
                                                 </div>
                                             </div>
                                         </div>
@@ -208,34 +208,32 @@
 
 <div id="templates">
     <div class="page">
-        <div class="address">
-            <strong>Hasso-Plattner-Institut</strong>
-            für Softwaresystemtechnik GmbH<br/>
-            Prof.-Dr.-Helmert-Str. 2-3; 14482 Potsdam
-        </div>
+        <img class="logo" src="logo.png" />
 
-        <img class="logo" src="logo.jpg" />
+        <div class="title">Arbeitszeitnachweis</div>
 
-        <div class="title">Stundennachweis</div>
-
-        <div class="name">Name, Vorname</div>
+        <div class="name">Name des Mitarbeiters:</div>
         <div class="name_value"></div>
 
-        <div class="personalnumber">Personalnummer</div>
+        <div class="weekhours">Wochenarbeitszeit<br />lt. Vertrag:</div>
+        <div class="weekhours_value"></div>
+
+        <div class="personalnumber">Pers.-Nr.:</div>
         <div class="personalnumber_value">&nbsp;</div>
 
-        <div class="monthyear">Monat/Jahr</div>
+        <div class="monthyear">Monat / Jahr</div>
         <div class="monthyear_value"></div>
 
         <table>
             <thead>
             <tr>
-                <th>Tag</th>
-                <th>Beginn<br/>(Uhrzeit)</th>
-                <th>Pause</th>
-                <th>Ende<br/>(Uhrzeit)</th>
-                <th>Dauer<br/>(Summe)</th>
-                <th>Datum/Unterschrift<br/>(wöchentlich Fachgebiet)</th>
+                <th><strong>Kalen-<br />dertag</strong></th>
+                <th><strong>Beginn</strong><br/>(Uhrzeit)</th>
+                <th><strong>Pause</strong></th>
+                <th><strong>Ende</strong><br/>(Uhrzeit)</th>
+                <th><strong>Dauer</strong><br/>(Summe)</th>
+                <th><strong>*</strong></th>
+                <th><strong>Bemerkungen</strong></th>
             </tr>
             </thead>
             <tbody>
@@ -245,7 +243,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
-                <td rowspan="7"></td>
+                 <td class="shortcut"></td>
+                <td class="notes"></td>
             </tr>
             <tr class="day number2">
                 <td class="number">2</td>
@@ -253,6 +252,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                <td class="notes"></td>
             </tr>
             <tr class="day number3">
                 <td class="number">3</td>
@@ -260,6 +261,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                <td class="notes"></td>
             </tr>
             <tr class="day number4">
                 <td class="number">4</td>
@@ -267,6 +270,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number5">
                 <td class="number">5</td>
@@ -274,6 +279,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number6">
                 <td class="number">6</td>
@@ -281,6 +288,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number7">
                 <td class="number">7</td>
@@ -288,6 +297,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number8">
                 <td class="number">8</td>
@@ -295,7 +306,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
-                <td rowspan="7"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number9">
                 <td class="number">9</td>
@@ -303,6 +315,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number10">
                 <td class="number">10</td>
@@ -310,6 +324,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number11">
                 <td class="number">11</td>
@@ -317,6 +333,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number12">
                 <td class="number">12</td>
@@ -324,6 +342,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number13">
                 <td class="number">13</td>
@@ -331,6 +351,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number14">
                 <td class="number">14</td>
@@ -338,6 +360,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number15">
                 <td class="number">15</td>
@@ -345,7 +369,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
-                <td rowspan="7"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number16">
                 <td class="number">16</td>
@@ -353,6 +378,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number17">
                 <td class="number">17</td>
@@ -360,6 +387,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number18">
                 <td class="number">18</td>
@@ -367,6 +396,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number19">
                 <td class="number">19</td>
@@ -374,6 +405,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number20">
                 <td class="number">20</td>
@@ -381,6 +414,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number21">
                 <td class="number">21</td>
@@ -388,6 +423,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number22">
                 <td class="number">22</td>
@@ -395,7 +432,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
-                <td rowspan="7"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number23">
                 <td class="number">23</td>
@@ -403,6 +441,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number24">
                 <td class="number">24</td>
@@ -410,6 +450,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number25">
                 <td class="number">25</td>
@@ -417,6 +459,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number26">
                 <td class="number">26</td>
@@ -424,6 +468,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number27">
                 <td class="number">27</td>
@@ -431,6 +477,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number28">
                 <td class="number">28</td>
@@ -438,6 +486,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number29">
                 <td class="number">29</td>
@@ -445,7 +495,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
-                <td rowspan="3"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number30">
                 <td class="number">30</td>
@@ -453,6 +504,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             <tr class="day number31">
                 <td class="number">31</td>
@@ -460,6 +513,8 @@
                 <td class="pause"></td>
                 <td class="end"></td>
                 <td class="sum"></td>
+                 <td class="shortcut"></td>
+                 <td class="notes"></td>
             </tr>
             </tbody>
         </table>
