add pause description

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <tr>
                 <th><strong>Kalen-<br />dertag</strong></th>
                 <th><strong>Beginn</strong><br/>(Uhrzeit)</th>
-                <th><strong>Pause</strong></th>
+                <th><strong>Pause</strong><br />(Dauer)</th>
                 <th><strong>Ende</strong><br/>(Uhrzeit)</th>
                 <th><strong>Dauer</strong><br/>(Summe)</th>
                 <th><strong>*</strong></th>
