--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
                                     <div class="small-11">
                                         <div class="row">
                                             <div class="small-3 columns">
+                                                <label for="form-personnelnr" class="right">Personalnummer</label>
+                                            </div>
+                                            <div class="small-9 columns">
+                                                <input type="text" name="form-personnelnr" id="form-personnelnr" placeholder="1234" value="" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="small-11">
+                                        <div class="row">
+                                            <div class="small-3 columns">
                                                 <label for="form-start" class="right">Vertragsbeginn</label>
                                             </div>
                                             <div class="small-9 columns">
