remove personal information

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                                 <label for="form-name" class="right">Vollständiger Name</label>
                                             </div>
                                             <div class="small-9 columns">
-                                                <input type="text" name="form-name" id="form-name" placeholder="Lukas Schulze" value="Lukas Schulze" />
+                                                <input type="text" name="form-name" id="form-name" placeholder="Vorname Nachname" value="" />
                                             </div>
                                         </div>
                                     </div>
@@ -45,7 +45,7 @@
                                                 <label for="form-hours" class="right">Wochenstunden</label>
                                             </div>
                                             <div class="small-9 columns">
-                                                <input type="text" name="form-hours" id="form-hours" placeholder="7.5" value="10" />
+                                                <input type="text" name="form-hours" id="form-hours" placeholder="7.5" value="" />
                                             </div>
                                         </div>
                                     </div>
