--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                                 <label for="form-personnelnr" class="right">Personalnummer</label>
                                             </div>
                                             <div class="small-9 columns">
-                                                <input type="text" name="form-personnelnr" id="form-personnelnr" placeholder="(nummerisch, optional)" value="" />
+                                                <input type="text" name="form-personnelnr" id="form-personnelnr" placeholder="(numerisch, optional)" value="" />
                                             </div>
                                         </div>
                                     </div>
